--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
 
     <div style="display:flex; gap:12px; justify-content:center; align-items:center; flex-wrap:wrap;">
       <label>歌曲</label>
-      <select id="reportSongSelect" style="padding:10px; font-size:16px; min-width:260px;"></select>
+      <select id="reportSongSelect"
+        style="padding:10px; font-size:16px; min-width:260px;"
+        onchange="loadReport()">
+</select>
 
-      <button onclick="loadReport()" style="padding:10px 18px;">更新圖表</button>
+   
       <button onclick="backToMain()" style="padding:10px 18px; background:#555; color:#fff;">返回遊戲</button>
     </div>
 
