--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
       <select id="reportSongSelect"
         style="padding:10px; font-size:16px; min-width:260px;"
         onchange="loadReport()">
+      <label>開始</label>
+<input id="fromDT" type="datetime-local" step="3600"
+       style="padding:8px; font-size:14px;">
+
+<label>結束</label>
+<input id="toDT" type="datetime-local" step="3600"
+       style="padding:8px; font-size:14px;">
+  
 </select>
 
    
@@ -607,11 +615,15 @@ async function loadReport() {
   }
 
   const songName = document.getElementById("reportSongSelect")?.value ?? "";
-
+  const fromDT = document.getElementById("fromDT")?.value || "";
+  const toDT   = document.getElementById("toDT")?.value || "";
   // ✅ 用你現有的 get_scores.php
   // 常見參數：player_id / song_name
   // 如果你的 php 用的是 id / song 也沒關係，下面會再提供你要改哪裡
-  const url = `/test/api/get_scores.php?player_id=${encodeURIComponent(playerId)}&song_name=${encodeURIComponent(songName)}`;
+  const url = `/test/api/get_scores.php?player_id=${encodeURIComponent(playerId)}`
+  + `&song_name=${encodeURIComponent(songName)}`
+  + `&from=${encodeURIComponent(fromDT)}`
+  + `&to=${encodeURIComponent(toDT)}`;
 
   let rows = [];
   try {
@@ -677,6 +689,8 @@ window.addEventListener("load", () => {
 
   const savedId = localStorage.getItem("userId");
   const savedName = localStorage.getItem("userName");
+  document.getElementById("fromDT").addEventListener("change", loadReport);
+  document.getElementById("toDT").addEventListener("change", loadReport);
 
   if (savedId && savedName) {
     document.getElementById("userName").innerText = `${savedId}｜${savedName}`;
