--- a/index.html
+++ b/index.html
@@ -472,6 +472,9 @@ function updateVolume(val) {
 }
 
 function startGame() {
+  localStorage.removeItem("gameState");
+  localStorage.setItem("gameState", "playing");
+
   document.getElementById("soundTestToggle").checked = false;
 
   song = document.getElementById("songSelect").value
