--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <div id="loginBox">
   <input id="idInput" placeholder="輸入編號" />
-  <input id="nameInput" placeholder="玩家姓名" readonly />
+  <input id="nameInput" placeholder="玩家姓名" />
   <button onclick="login()">登入</button>
   <p id="loginMsg"></p>
 </div>
