--- a/index.html
+++ b/index.html
@@ -139,18 +139,13 @@
         style="padding:10px; font-size:16px; min-width:260px;"
         onchange="loadReport()">
       <label>開始</label>
-<input id="fromDT" type="datetime-local" step="3600"
+<input id="fromDT" type="date" step="3600"
        style="padding:8px; font-size:14px;">
 
 <label>結束</label>
-<input id="toDT" type="datetime-local" step="3600"
+<input id="toDT" type="date" step="3600"
        style="padding:8px; font-size:14px;">
-  <label style="margin-left:10px;">模式</label>
-<select id="reportMode" style="padding:10px; font-size:16px;" onchange="loadReport()">
-  <option value="daily_best">每天最佳(最短)</option>
-  <option value="each_try" selected>每次紀錄(到小時)</option>
-  <option value="hour_best">每小時最佳</option>
-</select>
+  
 
 </select>
 
@@ -716,14 +711,17 @@ async function loadReport() {
   }
 
   const songName = document.getElementById("reportSongSelect")?.value ?? "";
-  const fromDT = document.getElementById("fromDT")?.value || "";
-  const toDT   = document.getElementById("toDT")?.value || "";
-  const mode   = document.getElementById("reportMode")?.value || "daily_best";
+  const fromD = document.getElementById("fromDT")?.value || "";
+  const toD   = document.getElementById("toDT")?.value || "";
+
+  // ✅ date → 範圍補成整天
+  const from = fromD ? `${fromD} 00:00:00` : "";
+  const to   = toD   ? `${toD} 23:59:59`   : "";
 
   const url = `/test/api/get_scores.php?player_id=${encodeURIComponent(playerId)}`
     + `&song_name=${encodeURIComponent(songName)}`
-    + `&from=${encodeURIComponent(fromDT)}`
-    + `&to=${encodeURIComponent(toDT)}`;
+    + `&from=${encodeURIComponent(from)}`
+    + `&to=${encodeURIComponent(to)}`;
 
   let rows = [];
   try {
@@ -733,9 +731,47 @@ async function loadReport() {
     if (!Array.isArray(rows)) rows = [];
   } catch (e) {
     console.error(e);
-    if (msgEl) msgEl.textContent = "❌ 讀取成績失敗（請看 Console / Network Response）";
+    if (msgEl) msgEl.textContent = "❌ 讀取成績失敗（請看 Console / Network）";
     return;
   }
+
+  const canvas = document.getElementById("reportChart");
+  if (!canvas) return;
+
+  const { labels, data } = groupByHour(rows);
+
+  if (progressChart) { progressChart.destroy(); progressChart = null; }
+
+  if (labels.length === 0) {
+    if (msgEl) msgEl.textContent = "目前沒有資料（請調整日期或先玩一局）";
+    progressChart = new Chart(canvas, {
+      type: "line",
+      data: { labels: [], datasets: [{ label: "沒有資料", data: [] }] }
+    });
+    return;
+  }
+
+  progressChart = new Chart(canvas, {
+    type: "line",
+    data: {
+      labels,
+      datasets: [{
+        label: "每小時紀錄（顯示到小時）",
+        data,
+        borderWidth: 2,
+        tension: 0.3
+      }]
+    },
+    options: {
+      responsive: true,
+      scales: {
+        y: { title: { display: true, text: "秒數" } },
+        x: { title: { display: true, text: "日期（小時）" } }
+      }
+    }
+  });
+}
+
 
   // ✅ 將資料標準化（你 DB 欄位就是 seconds / created_at）
   const parsed = rows
@@ -745,6 +781,33 @@ async function loadReport() {
     }))
     .filter(x => !isNaN(x.seconds) && x.created_at);
 
+function groupByHour(rows) {
+  const map = new Map(); // "YYYY-MM-DD HH" -> seconds
+
+  for (const r of rows) {
+    const dt = r.created_at;
+    const sec = Number(r.seconds);
+    if (!dt || isNaN(sec)) continue;
+
+    // "2026-01-30 18:58:32" → 轉 Date
+    const d = new Date(dt.replace(" ", "T"));
+
+    const key =
+      d.getFullYear() + "-" +
+      String(d.getMonth() + 1).padStart(2, "0") + "-" +
+      String(d.getDate()).padStart(2, "0") + " " +
+      String(d.getHours()).padStart(2, "0");
+
+    // 同小時多筆 → 取最後一筆（覆蓋）
+    map.set(key, sec);
+  }
+
+  const labels = Array.from(map.keys()).sort();
+  const data = labels.map(k => map.get(k));
+  return { labels, data };
+}
+
+    
   // ✅ 依模式產生 labels/data
   let labels = [];
   let data = [];
@@ -840,6 +903,7 @@ window.addEventListener("load", () => {
   const savedName = localStorage.getItem("userName");
   document.getElementById("fromDT").addEventListener("change", loadReport);
   document.getElementById("toDT").addEventListener("change", loadReport);
+  document.getElementById("reportSongSelect").addEventListener("change", loadReport);
 
   if (savedId && savedName) {
     document.getElementById("userName").innerText = `${savedId}｜${savedName}`;
